# DistSpMV_Balanced

./: .gitignore  CMakeLists.txt  EXPERIMENT_REPORT.md  README.md  config.yaml  requirements.txt
data/: test_small.mtx
scripts/: plot_results.py  run_exp.ps1  run_exp.sh
src/: __init__.py  comm_setup.cpp  comm_setup.hpp  comm_setup.py  main.cpp  main.py  mmio.cpp  mmio.hpp  partition.cpp  partition.hpp  partition.py  redistribute.cpp  redistribute.hpp  reordering.cpp  reordering.hpp  reordering.py  spmv_mpi_omp.py  spmv_solver.cpp  spmv_solver.hpp  types.hpp  utils.cpp  utils.hpp  utils.py
tests/: test_spmv.cpp  test_spmv.py
